# rusolver

./: .gitignore  Cargo.toml  README.md  builder.sh  resolvers.txt  rusolver.1
.github/workflows/: make-release.yml
files/: hosts.txt  resolved.txt
src/: args.rs  dnslib.rs  lib.rs  main.rs  resolver.rs  structs.rs  utils.rs
