[package]
name = "rusolver"
version = "0.10.2"
authors = ["Eduard Tolosa <edu4rdshl@protonmail.com>"]
edition = "2021"
description = "Fast DNS resolver written in Rust."
repository = "https://github.com/edu4rdshl/rusolver"
license = "GPL-3.0-or-later"
keywords = ["dns-resolution", "dns-resolver"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
futures = "0.3.31"
hickory-resolver = "0.25.2"
clap = { version = "4.5.41", features = ["derive"] }
rand = "0.9.2"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
